# AVeRy

./: CMakeLists.txt  README.md  build.sh
configuration/: AVR.cmake  AVR_328.cmake
src/: main.cpp
